@@ -1,30 +1,32 @@
-FROM adoptopenjdk/openjdk11:jdk-11.0.6_10-slim
+ARG ARCH
 
-LABEL version "@version@"
+FROM adoptopenjdk/openjdk8:${ARCH}-alpine-jdk8u282-b08-slim
+
+ARG COMMANDBOX_VERSION
+ARG VERSION
+
+LABEL version ${VERSION}
 LABEL maintainer "Jon Clausen <jclausen@ortussolutions.com>"
 LABEL repository "https://github.com/Ortus-Solutions/docker-commandbox"
 
-ARG COMMANDBOX_VERSION
 # Default to UTF-8 file.encoding
 ENV LANG C.UTF-8
 
 # Since alpine runs as a single user, we need to create a "root" direcotry
 ENV HOME /root
 
-# Add a working group which any dynamic users can be assigned
-ENV WORKGROUP runwar
-RUN groupadd $WORKGROUP && usermod -a -G $WORKGROUP root
+# Alpine workgroup is the same
+ENV WORKGROUP root
+
+# Flag as an alpine build
+RUN touch /etc/alpine-release
 
 ### Directory Mappings ###
 # BIN_DIR = Where the box binary goes
-ENV BIN_DIR /usr/local/bin
+ENV BIN_DIR /usr/bin
 # LIB_DIR = Where the build files go
-ENV LIB_DIR /usr/local/lib
+ENV LIB_DIR /usr/lib
 WORKDIR $BIN_DIR
-
-# BUILD_DIR = WHERE runtime scripts go
-ENV BUILD_DIR $LIB_DIR/build
-WORKDIR $BUILD_DIR
 
 # COMMANDBOX_HOME = Where CommmandBox Lives
 ENV COMMANDBOX_HOME=$LIB_DIR/CommandBox
@@ -33,21 +35,21 @@ ENV COMMANDBOX_HOME=$LIB_DIR/CommandBox
 ENV APP_DIR /app
 WORKDIR $APP_DIR
 
-COPY ./builds/debian ${BUILD_DIR}/debian  
-
-# Basic Dependencies
-RUN ${BUILD_DIR}/debian/install-dependencies.sh
+# BUILD_DIR = WHERE runtime scripts go
+ENV BUILD_DIR $LIB_DIR/build
+WORKDIR $BUILD_DIR
 
 # Copy file system
 COPY ./test/ ${APP_DIR}/
 COPY ./build/ ${BUILD_DIR}/
-RUN chmod +x $BUILD_DIR/*.sh
 
-# Ensure all runwar users have permission on the build scripts
-RUN chown -R $(whoami):${WORKGROUP} $BUILD_DIR
+# Ensure all workgroup users have permission on the build scripts
+RUN chown -R nobody:${WORKGROUP} $BUILD_DIR
+RUN chmod -R +x $BUILD_DIR
 
-# Set up our environment to allow CommandBox to run on JRE11
-ENV BOX_JAVA_ARGS="-Djdk.attach.allowAttachSelf=true"
+# Basic Dependencies including binaries for PDF rendering
+RUN rm -rf $BUILD_DIR/util/debian
+RUN $BUILD_DIR/util/alpine/install-dependencies.sh
 
 # Commandbox Installation
 RUN $BUILD_DIR/util/install-commandbox.sh
@@ -57,6 +59,9 @@ RUN $BUILD_DIR/util/install-cfconfig.sh
 
 # CommandBox-DotEnv Installation
 RUN $BUILD_DIR/util/install-dotenv.sh
+
+# Cleanup and Optimize our Installation
+RUN ${BUILD_DIR}/util/optimize.sh
 
 # Default Port Environment Variables
 ENV PORT 8080
@@ -69,5 +74,7 @@ ENV HEALTHCHECK_URI "http://127.0.0.1:${PORT}/"
 HEALTHCHECK --interval=20s --timeout=30s --retries=15 CMD curl --fail ${HEALTHCHECK_URI} || exit 1
 
 EXPOSE ${PORT} ${SSL_PORT}
+
+WORKDIR $APP_DIR
 
 CMD $BUILD_DIR/run.sh
